; ModuleID = '/home/carl/AnghaBench/openssl/ssl/extr_ssl_conf.c_cmd_SignatureAlgorithms.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/extr_ssl_conf.c_cmd_SignatureAlgorithms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @cmd_SignatureAlgorithms to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_SignatureAlgorithms(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @SSL_set1_sigalgs_list(i64 %13, i8* %14)
  store i32 %15, i32* %5, align 4
  br label %22

16:                                               ; preds = %2
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @SSL_CTX_set1_sigalgs_list(i32 %19, i8* %20)
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %16, %10
  %23 = load i32, i32* %5, align 4
  %24 = icmp sgt i32 %23, 0
  %25 = zext i1 %24 to i32
  ret i32 %25
}

declare dso_local i32 @SSL_set1_sigalgs_list(i64, i8*) #1

declare dso_local i32 @SSL_CTX_set1_sigalgs_list(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
